# hanafuda

./: Cargo.toml
assets/mesh/: card.gltf
assets/shaders/: card.frag
src/: cards.rs  game.rs  main.rs  player.rs  table.rs
