[package]
name = "hanafuda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5.0", features = ["jpeg"] }
#bevy = { git = "https://github.com/bevyengine/bevy", rev = "ffde86efa049dbdaf4ae4be3cd64c4c1c0f776f3", features = ["jpeg"] }