[package]
name = "hanafuda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5.0", features = ["jpeg"] }
bevy_easings = { version = "0.4.0", default-features = false }
rand = "0.8.4"
