[package]
name = "hanafuda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.0", features = ["jpeg"] }
bevy-inspector-egui = "0.19.0"
strum = { version = "0.25.0", features = ["derive"] }
